parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> linst
Rule 2     linst -> linst inst
Rule 3     linst -> inst
Rule 4     inst -> increment COLON
Rule 5     inst -> decrement COLON
Rule 6     inst -> operator_assign COLON
Rule 7     increment -> NAME PLUS PLUS
Rule 8     decrement -> NAME MINUS MINUS
Rule 9     operator_assign -> NAME operator EQUAL expression
Rule 10    inst -> assign COLON
Rule 11    assign -> NAME EQUAL expression
Rule 12    inst -> WHILE LPAREN condition RPAREN b_bloc
Rule 13    inst -> FOR LPAREN assign COLON condition COLON increment RPAREN b_bloc
Rule 14    inst -> FOR LPAREN assign COLON condition COLON operator_assign RPAREN b_bloc
Rule 15    inst -> FOR LPAREN assign COLON condition COLON decrement RPAREN b_bloc
Rule 16    inst -> IF LPAREN condition RPAREN b_bloc
Rule 17    inst -> IF LPAREN condition RPAREN b_bloc else
Rule 18    else -> ELSE inst
Rule 19    else -> ELSE b_bloc
Rule 20    condition -> expression EQUALS expression
Rule 21    condition -> expression LOWER expression
Rule 22    condition -> expression HIGHER expression
Rule 23    condition -> expression HIGHEQUAL expression
Rule 24    condition -> expression LOWEQUAL expression
Rule 25    condition -> expression OR expression
Rule 26    condition -> expression AND expression
Rule 27    expression -> expression operator expression
Rule 28    inst -> MAIN LPAREN RPAREN b_bloc
Rule 29    inst -> RETURN expression COLON
Rule 30    inst -> RETURN condition COLON
Rule 31    inst -> FUNCTION NAME LPAREN params RPAREN b_bloc
Rule 32    expression -> NAME LPAREN call_params RPAREN
Rule 33    inst -> NAME LPAREN call_params RPAREN COLON
Rule 34    call_params -> expression COMMA call_params
Rule 35    call_params -> expression
Rule 36    call_params -> <empty>
Rule 37    params -> NAME COMMA params
Rule 38    params -> NAME
Rule 39    params -> <empty>
Rule 40    inst -> PRINT LPAREN expression RPAREN COLON
Rule 41    inst -> SPRINT LPAREN STRING RPAREN COLON
Rule 42    b_bloc -> LBRACKET linst RBRACKET
Rule 43    operator -> PLUS
Rule 44    operator -> MINUS
Rule 45    operator -> DIVIDE
Rule 46    operator -> TIMES
Rule 47    operator -> MODULO
Rule 48    expression -> LPAREN expression RPAREN
Rule 49    expression -> NUMBER
Rule 50    expression -> TRUE
Rule 51    expression -> FALSE
Rule 52    expression -> NAME
Rule 53    expression -> MINUS expression
Rule 54    inst -> params EQUAL multiple_values
Rule 55    multiple_values -> expression
Rule 56    multiple_values -> expression COMMA multiple_values

Terminals, with rules where they appear

AND                  : 26
COLON                : 4 5 6 10 13 13 14 14 15 15 29 30 33 40 41
COMMA                : 34 37 56
DIVIDE               : 45
ELSE                 : 18 19
EQUAL                : 9 11 54
EQUALS               : 20
FALSE                : 51
FOR                  : 13 14 15
FUNCTION             : 31
HIGHEQUAL            : 23
HIGHER               : 22
IF                   : 16 17
LBRACKET             : 42
LOWEQUAL             : 24
LOWER                : 21
LPAREN               : 12 13 14 15 16 17 28 31 32 33 40 41 48
MAIN                 : 28
MINUS                : 8 8 44 53
MODULO               : 47
NAME                 : 7 8 9 11 31 32 33 37 38 52
NUMBER               : 49
OR                   : 25
PLUS                 : 7 7 43
PRINT                : 40
RBRACKET             : 42
RETURN               : 29 30
RPAREN               : 12 13 14 15 16 17 28 31 32 33 40 41 48
SPRINT               : 41
STRING               : 41
TIMES                : 46
TRUE                 : 50
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

assign               : 10 13 14 15
b_bloc               : 12 13 14 15 16 17 19 28 31
call_params          : 32 33 34
condition            : 12 13 14 15 16 17 30
decrement            : 5 15
else                 : 17
expression           : 9 11 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 29 34 35 40 48 53 55 56
increment            : 4 13
inst                 : 2 3 18
linst                : 1 2 42
multiple_values      : 54 56
operator             : 9 27
operator_assign      : 6 14
params               : 31 37 54
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . linst
    (2) linst -> . linst inst
    (3) linst -> . inst
    (4) inst -> . increment COLON
    (5) inst -> . decrement COLON
    (6) inst -> . operator_assign COLON
    (10) inst -> . assign COLON
    (12) inst -> . WHILE LPAREN condition RPAREN b_bloc
    (13) inst -> . FOR LPAREN assign COLON condition COLON increment RPAREN b_bloc
    (14) inst -> . FOR LPAREN assign COLON condition COLON operator_assign RPAREN b_bloc
    (15) inst -> . FOR LPAREN assign COLON condition COLON decrement RPAREN b_bloc
    (16) inst -> . IF LPAREN condition RPAREN b_bloc
    (17) inst -> . IF LPAREN condition RPAREN b_bloc else
    (28) inst -> . MAIN LPAREN RPAREN b_bloc
    (29) inst -> . RETURN expression COLON
    (30) inst -> . RETURN condition COLON
    (31) inst -> . FUNCTION NAME LPAREN params RPAREN b_bloc
    (33) inst -> . NAME LPAREN call_params RPAREN COLON
    (40) inst -> . PRINT LPAREN expression RPAREN COLON
    (41) inst -> . SPRINT LPAREN STRING RPAREN COLON
    (54) inst -> . params EQUAL multiple_values
    (7) increment -> . NAME PLUS PLUS
    (8) decrement -> . NAME MINUS MINUS
    (9) operator_assign -> . NAME operator EQUAL expression
    (11) assign -> . NAME EQUAL expression
    (37) params -> . NAME COMMA params
    (38) params -> . NAME
    (39) params -> .

    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    IF              shift and go to state 10
    MAIN            shift and go to state 11
    RETURN          shift and go to state 12
    FUNCTION        shift and go to state 13
    NAME            shift and go to state 14
    PRINT           shift and go to state 16
    SPRINT          shift and go to state 17
    EQUAL           reduce using rule 39 (params -> .)

    start                          shift and go to state 1
    linst                          shift and go to state 2
    inst                           shift and go to state 3
    increment                      shift and go to state 4
    decrement                      shift and go to state 5
    operator_assign                shift and go to state 6
    assign                         shift and go to state 7
    params                         shift and go to state 15

state 1

    (0) S' -> start .



state 2

    (1) start -> linst .
    (2) linst -> linst . inst
    (4) inst -> . increment COLON
    (5) inst -> . decrement COLON
    (6) inst -> . operator_assign COLON
    (10) inst -> . assign COLON
    (12) inst -> . WHILE LPAREN condition RPAREN b_bloc
    (13) inst -> . FOR LPAREN assign COLON condition COLON increment RPAREN b_bloc
    (14) inst -> . FOR LPAREN assign COLON condition COLON operator_assign RPAREN b_bloc
    (15) inst -> . FOR LPAREN assign COLON condition COLON decrement RPAREN b_bloc
    (16) inst -> . IF LPAREN condition RPAREN b_bloc
    (17) inst -> . IF LPAREN condition RPAREN b_bloc else
    (28) inst -> . MAIN LPAREN RPAREN b_bloc
    (29) inst -> . RETURN expression COLON
    (30) inst -> . RETURN condition COLON
    (31) inst -> . FUNCTION NAME LPAREN params RPAREN b_bloc
    (33) inst -> . NAME LPAREN call_params RPAREN COLON
    (40) inst -> . PRINT LPAREN expression RPAREN COLON
    (41) inst -> . SPRINT LPAREN STRING RPAREN COLON
    (54) inst -> . params EQUAL multiple_values
    (7) increment -> . NAME PLUS PLUS
    (8) decrement -> . NAME MINUS MINUS
    (9) operator_assign -> . NAME operator EQUAL expression
    (11) assign -> . NAME EQUAL expression
    (37) params -> . NAME COMMA params
    (38) params -> . NAME
    (39) params -> .

    $end            reduce using rule 1 (start -> linst .)
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    IF              shift and go to state 10
    MAIN            shift and go to state 11
    RETURN          shift and go to state 12
    FUNCTION        shift and go to state 13
    NAME            shift and go to state 14
    PRINT           shift and go to state 16
    SPRINT          shift and go to state 17
    EQUAL           reduce using rule 39 (params -> .)

    inst                           shift and go to state 18
    increment                      shift and go to state 4
    decrement                      shift and go to state 5
    operator_assign                shift and go to state 6
    assign                         shift and go to state 7
    params                         shift and go to state 15

state 3

    (3) linst -> inst .

    WHILE           reduce using rule 3 (linst -> inst .)
    FOR             reduce using rule 3 (linst -> inst .)
    IF              reduce using rule 3 (linst -> inst .)
    MAIN            reduce using rule 3 (linst -> inst .)
    RETURN          reduce using rule 3 (linst -> inst .)
    FUNCTION        reduce using rule 3 (linst -> inst .)
    NAME            reduce using rule 3 (linst -> inst .)
    PRINT           reduce using rule 3 (linst -> inst .)
    SPRINT          reduce using rule 3 (linst -> inst .)
    EQUAL           reduce using rule 3 (linst -> inst .)
    $end            reduce using rule 3 (linst -> inst .)
    RBRACKET        reduce using rule 3 (linst -> inst .)


state 4

    (4) inst -> increment . COLON

    COLON           shift and go to state 19


state 5

    (5) inst -> decrement . COLON

    COLON           shift and go to state 20


state 6

    (6) inst -> operator_assign . COLON

    COLON           shift and go to state 21


state 7

    (10) inst -> assign . COLON

    COLON           shift and go to state 22


state 8

    (12) inst -> WHILE . LPAREN condition RPAREN b_bloc

    LPAREN          shift and go to state 23


state 9

    (13) inst -> FOR . LPAREN assign COLON condition COLON increment RPAREN b_bloc
    (14) inst -> FOR . LPAREN assign COLON condition COLON operator_assign RPAREN b_bloc
    (15) inst -> FOR . LPAREN assign COLON condition COLON decrement RPAREN b_bloc

    LPAREN          shift and go to state 24


state 10

    (16) inst -> IF . LPAREN condition RPAREN b_bloc
    (17) inst -> IF . LPAREN condition RPAREN b_bloc else

    LPAREN          shift and go to state 25


state 11

    (28) inst -> MAIN . LPAREN RPAREN b_bloc

    LPAREN          shift and go to state 26


state 12

    (29) inst -> RETURN . expression COLON
    (30) inst -> RETURN . condition COLON
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression
    (20) condition -> . expression EQUALS expression
    (21) condition -> . expression LOWER expression
    (22) condition -> . expression HIGHER expression
    (23) condition -> . expression HIGHEQUAL expression
    (24) condition -> . expression LOWEQUAL expression
    (25) condition -> . expression OR expression
    (26) condition -> . expression AND expression

    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    expression                     shift and go to state 27
    condition                      shift and go to state 28

state 13

    (31) inst -> FUNCTION . NAME LPAREN params RPAREN b_bloc

    NAME            shift and go to state 35


state 14

    (33) inst -> NAME . LPAREN call_params RPAREN COLON
    (7) increment -> NAME . PLUS PLUS
    (8) decrement -> NAME . MINUS MINUS
    (9) operator_assign -> NAME . operator EQUAL expression
    (11) assign -> NAME . EQUAL expression
    (37) params -> NAME . COMMA params
    (38) params -> NAME .
    (43) operator -> . PLUS
    (44) operator -> . MINUS
    (45) operator -> . DIVIDE
    (46) operator -> . TIMES
    (47) operator -> . MODULO

  ! shift/reduce conflict for EQUAL resolved as shift
    LPAREN          shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    EQUAL           shift and go to state 40
    COMMA           shift and go to state 41
    DIVIDE          shift and go to state 42
    TIMES           shift and go to state 43
    MODULO          shift and go to state 44

  ! EQUAL           [ reduce using rule 38 (params -> NAME .) ]

    operator                       shift and go to state 39

state 15

    (54) inst -> params . EQUAL multiple_values

    EQUAL           shift and go to state 45


state 16

    (40) inst -> PRINT . LPAREN expression RPAREN COLON

    LPAREN          shift and go to state 46


state 17

    (41) inst -> SPRINT . LPAREN STRING RPAREN COLON

    LPAREN          shift and go to state 47


state 18

    (2) linst -> linst inst .

    WHILE           reduce using rule 2 (linst -> linst inst .)
    FOR             reduce using rule 2 (linst -> linst inst .)
    IF              reduce using rule 2 (linst -> linst inst .)
    MAIN            reduce using rule 2 (linst -> linst inst .)
    RETURN          reduce using rule 2 (linst -> linst inst .)
    FUNCTION        reduce using rule 2 (linst -> linst inst .)
    NAME            reduce using rule 2 (linst -> linst inst .)
    PRINT           reduce using rule 2 (linst -> linst inst .)
    SPRINT          reduce using rule 2 (linst -> linst inst .)
    EQUAL           reduce using rule 2 (linst -> linst inst .)
    $end            reduce using rule 2 (linst -> linst inst .)
    RBRACKET        reduce using rule 2 (linst -> linst inst .)


state 19

    (4) inst -> increment COLON .

    WHILE           reduce using rule 4 (inst -> increment COLON .)
    FOR             reduce using rule 4 (inst -> increment COLON .)
    IF              reduce using rule 4 (inst -> increment COLON .)
    MAIN            reduce using rule 4 (inst -> increment COLON .)
    RETURN          reduce using rule 4 (inst -> increment COLON .)
    FUNCTION        reduce using rule 4 (inst -> increment COLON .)
    NAME            reduce using rule 4 (inst -> increment COLON .)
    PRINT           reduce using rule 4 (inst -> increment COLON .)
    SPRINT          reduce using rule 4 (inst -> increment COLON .)
    EQUAL           reduce using rule 4 (inst -> increment COLON .)
    $end            reduce using rule 4 (inst -> increment COLON .)
    RBRACKET        reduce using rule 4 (inst -> increment COLON .)


state 20

    (5) inst -> decrement COLON .

    WHILE           reduce using rule 5 (inst -> decrement COLON .)
    FOR             reduce using rule 5 (inst -> decrement COLON .)
    IF              reduce using rule 5 (inst -> decrement COLON .)
    MAIN            reduce using rule 5 (inst -> decrement COLON .)
    RETURN          reduce using rule 5 (inst -> decrement COLON .)
    FUNCTION        reduce using rule 5 (inst -> decrement COLON .)
    NAME            reduce using rule 5 (inst -> decrement COLON .)
    PRINT           reduce using rule 5 (inst -> decrement COLON .)
    SPRINT          reduce using rule 5 (inst -> decrement COLON .)
    EQUAL           reduce using rule 5 (inst -> decrement COLON .)
    $end            reduce using rule 5 (inst -> decrement COLON .)
    RBRACKET        reduce using rule 5 (inst -> decrement COLON .)


state 21

    (6) inst -> operator_assign COLON .

    WHILE           reduce using rule 6 (inst -> operator_assign COLON .)
    FOR             reduce using rule 6 (inst -> operator_assign COLON .)
    IF              reduce using rule 6 (inst -> operator_assign COLON .)
    MAIN            reduce using rule 6 (inst -> operator_assign COLON .)
    RETURN          reduce using rule 6 (inst -> operator_assign COLON .)
    FUNCTION        reduce using rule 6 (inst -> operator_assign COLON .)
    NAME            reduce using rule 6 (inst -> operator_assign COLON .)
    PRINT           reduce using rule 6 (inst -> operator_assign COLON .)
    SPRINT          reduce using rule 6 (inst -> operator_assign COLON .)
    EQUAL           reduce using rule 6 (inst -> operator_assign COLON .)
    $end            reduce using rule 6 (inst -> operator_assign COLON .)
    RBRACKET        reduce using rule 6 (inst -> operator_assign COLON .)


state 22

    (10) inst -> assign COLON .

    WHILE           reduce using rule 10 (inst -> assign COLON .)
    FOR             reduce using rule 10 (inst -> assign COLON .)
    IF              reduce using rule 10 (inst -> assign COLON .)
    MAIN            reduce using rule 10 (inst -> assign COLON .)
    RETURN          reduce using rule 10 (inst -> assign COLON .)
    FUNCTION        reduce using rule 10 (inst -> assign COLON .)
    NAME            reduce using rule 10 (inst -> assign COLON .)
    PRINT           reduce using rule 10 (inst -> assign COLON .)
    SPRINT          reduce using rule 10 (inst -> assign COLON .)
    EQUAL           reduce using rule 10 (inst -> assign COLON .)
    $end            reduce using rule 10 (inst -> assign COLON .)
    RBRACKET        reduce using rule 10 (inst -> assign COLON .)


state 23

    (12) inst -> WHILE LPAREN . condition RPAREN b_bloc
    (20) condition -> . expression EQUALS expression
    (21) condition -> . expression LOWER expression
    (22) condition -> . expression HIGHER expression
    (23) condition -> . expression HIGHEQUAL expression
    (24) condition -> . expression LOWEQUAL expression
    (25) condition -> . expression OR expression
    (26) condition -> . expression AND expression
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression

    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    condition                      shift and go to state 48
    expression                     shift and go to state 49

state 24

    (13) inst -> FOR LPAREN . assign COLON condition COLON increment RPAREN b_bloc
    (14) inst -> FOR LPAREN . assign COLON condition COLON operator_assign RPAREN b_bloc
    (15) inst -> FOR LPAREN . assign COLON condition COLON decrement RPAREN b_bloc
    (11) assign -> . NAME EQUAL expression

    NAME            shift and go to state 51

    assign                         shift and go to state 50

state 25

    (16) inst -> IF LPAREN . condition RPAREN b_bloc
    (17) inst -> IF LPAREN . condition RPAREN b_bloc else
    (20) condition -> . expression EQUALS expression
    (21) condition -> . expression LOWER expression
    (22) condition -> . expression HIGHER expression
    (23) condition -> . expression HIGHEQUAL expression
    (24) condition -> . expression LOWEQUAL expression
    (25) condition -> . expression OR expression
    (26) condition -> . expression AND expression
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression

    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    condition                      shift and go to state 52
    expression                     shift and go to state 49

state 26

    (28) inst -> MAIN LPAREN . RPAREN b_bloc

    RPAREN          shift and go to state 53


state 27

    (29) inst -> RETURN expression . COLON
    (27) expression -> expression . operator expression
    (20) condition -> expression . EQUALS expression
    (21) condition -> expression . LOWER expression
    (22) condition -> expression . HIGHER expression
    (23) condition -> expression . HIGHEQUAL expression
    (24) condition -> expression . LOWEQUAL expression
    (25) condition -> expression . OR expression
    (26) condition -> expression . AND expression
    (43) operator -> . PLUS
    (44) operator -> . MINUS
    (45) operator -> . DIVIDE
    (46) operator -> . TIMES
    (47) operator -> . MODULO

    COLON           shift and go to state 54
    EQUALS          shift and go to state 56
    LOWER           shift and go to state 57
    HIGHER          shift and go to state 58
    HIGHEQUAL       shift and go to state 59
    LOWEQUAL        shift and go to state 60
    OR              shift and go to state 61
    AND             shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    DIVIDE          shift and go to state 42
    TIMES           shift and go to state 43
    MODULO          shift and go to state 44

    operator                       shift and go to state 55

state 28

    (30) inst -> RETURN condition . COLON

    COLON           shift and go to state 65


state 29

    (32) expression -> NAME . LPAREN call_params RPAREN
    (52) expression -> NAME .

    LPAREN          shift and go to state 66
    COLON           reduce using rule 52 (expression -> NAME .)
    EQUALS          reduce using rule 52 (expression -> NAME .)
    LOWER           reduce using rule 52 (expression -> NAME .)
    HIGHER          reduce using rule 52 (expression -> NAME .)
    HIGHEQUAL       reduce using rule 52 (expression -> NAME .)
    LOWEQUAL        reduce using rule 52 (expression -> NAME .)
    OR              reduce using rule 52 (expression -> NAME .)
    AND             reduce using rule 52 (expression -> NAME .)
    PLUS            reduce using rule 52 (expression -> NAME .)
    MINUS           reduce using rule 52 (expression -> NAME .)
    DIVIDE          reduce using rule 52 (expression -> NAME .)
    TIMES           reduce using rule 52 (expression -> NAME .)
    MODULO          reduce using rule 52 (expression -> NAME .)
    RPAREN          reduce using rule 52 (expression -> NAME .)
    COMMA           reduce using rule 52 (expression -> NAME .)
    WHILE           reduce using rule 52 (expression -> NAME .)
    FOR             reduce using rule 52 (expression -> NAME .)
    IF              reduce using rule 52 (expression -> NAME .)
    MAIN            reduce using rule 52 (expression -> NAME .)
    RETURN          reduce using rule 52 (expression -> NAME .)
    FUNCTION        reduce using rule 52 (expression -> NAME .)
    NAME            reduce using rule 52 (expression -> NAME .)
    PRINT           reduce using rule 52 (expression -> NAME .)
    SPRINT          reduce using rule 52 (expression -> NAME .)
    EQUAL           reduce using rule 52 (expression -> NAME .)
    $end            reduce using rule 52 (expression -> NAME .)
    RBRACKET        reduce using rule 52 (expression -> NAME .)


state 30

    (48) expression -> LPAREN . expression RPAREN
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression

    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    expression                     shift and go to state 67

state 31

    (49) expression -> NUMBER .

    COLON           reduce using rule 49 (expression -> NUMBER .)
    EQUALS          reduce using rule 49 (expression -> NUMBER .)
    LOWER           reduce using rule 49 (expression -> NUMBER .)
    HIGHER          reduce using rule 49 (expression -> NUMBER .)
    HIGHEQUAL       reduce using rule 49 (expression -> NUMBER .)
    LOWEQUAL        reduce using rule 49 (expression -> NUMBER .)
    OR              reduce using rule 49 (expression -> NUMBER .)
    AND             reduce using rule 49 (expression -> NUMBER .)
    PLUS            reduce using rule 49 (expression -> NUMBER .)
    MINUS           reduce using rule 49 (expression -> NUMBER .)
    DIVIDE          reduce using rule 49 (expression -> NUMBER .)
    TIMES           reduce using rule 49 (expression -> NUMBER .)
    MODULO          reduce using rule 49 (expression -> NUMBER .)
    RPAREN          reduce using rule 49 (expression -> NUMBER .)
    COMMA           reduce using rule 49 (expression -> NUMBER .)
    WHILE           reduce using rule 49 (expression -> NUMBER .)
    FOR             reduce using rule 49 (expression -> NUMBER .)
    IF              reduce using rule 49 (expression -> NUMBER .)
    MAIN            reduce using rule 49 (expression -> NUMBER .)
    RETURN          reduce using rule 49 (expression -> NUMBER .)
    FUNCTION        reduce using rule 49 (expression -> NUMBER .)
    NAME            reduce using rule 49 (expression -> NUMBER .)
    PRINT           reduce using rule 49 (expression -> NUMBER .)
    SPRINT          reduce using rule 49 (expression -> NUMBER .)
    EQUAL           reduce using rule 49 (expression -> NUMBER .)
    $end            reduce using rule 49 (expression -> NUMBER .)
    RBRACKET        reduce using rule 49 (expression -> NUMBER .)


state 32

    (50) expression -> TRUE .

    COLON           reduce using rule 50 (expression -> TRUE .)
    EQUALS          reduce using rule 50 (expression -> TRUE .)
    LOWER           reduce using rule 50 (expression -> TRUE .)
    HIGHER          reduce using rule 50 (expression -> TRUE .)
    HIGHEQUAL       reduce using rule 50 (expression -> TRUE .)
    LOWEQUAL        reduce using rule 50 (expression -> TRUE .)
    OR              reduce using rule 50 (expression -> TRUE .)
    AND             reduce using rule 50 (expression -> TRUE .)
    PLUS            reduce using rule 50 (expression -> TRUE .)
    MINUS           reduce using rule 50 (expression -> TRUE .)
    DIVIDE          reduce using rule 50 (expression -> TRUE .)
    TIMES           reduce using rule 50 (expression -> TRUE .)
    MODULO          reduce using rule 50 (expression -> TRUE .)
    RPAREN          reduce using rule 50 (expression -> TRUE .)
    COMMA           reduce using rule 50 (expression -> TRUE .)
    WHILE           reduce using rule 50 (expression -> TRUE .)
    FOR             reduce using rule 50 (expression -> TRUE .)
    IF              reduce using rule 50 (expression -> TRUE .)
    MAIN            reduce using rule 50 (expression -> TRUE .)
    RETURN          reduce using rule 50 (expression -> TRUE .)
    FUNCTION        reduce using rule 50 (expression -> TRUE .)
    NAME            reduce using rule 50 (expression -> TRUE .)
    PRINT           reduce using rule 50 (expression -> TRUE .)
    SPRINT          reduce using rule 50 (expression -> TRUE .)
    EQUAL           reduce using rule 50 (expression -> TRUE .)
    $end            reduce using rule 50 (expression -> TRUE .)
    RBRACKET        reduce using rule 50 (expression -> TRUE .)


state 33

    (51) expression -> FALSE .

    COLON           reduce using rule 51 (expression -> FALSE .)
    EQUALS          reduce using rule 51 (expression -> FALSE .)
    LOWER           reduce using rule 51 (expression -> FALSE .)
    HIGHER          reduce using rule 51 (expression -> FALSE .)
    HIGHEQUAL       reduce using rule 51 (expression -> FALSE .)
    LOWEQUAL        reduce using rule 51 (expression -> FALSE .)
    OR              reduce using rule 51 (expression -> FALSE .)
    AND             reduce using rule 51 (expression -> FALSE .)
    PLUS            reduce using rule 51 (expression -> FALSE .)
    MINUS           reduce using rule 51 (expression -> FALSE .)
    DIVIDE          reduce using rule 51 (expression -> FALSE .)
    TIMES           reduce using rule 51 (expression -> FALSE .)
    MODULO          reduce using rule 51 (expression -> FALSE .)
    RPAREN          reduce using rule 51 (expression -> FALSE .)
    COMMA           reduce using rule 51 (expression -> FALSE .)
    WHILE           reduce using rule 51 (expression -> FALSE .)
    FOR             reduce using rule 51 (expression -> FALSE .)
    IF              reduce using rule 51 (expression -> FALSE .)
    MAIN            reduce using rule 51 (expression -> FALSE .)
    RETURN          reduce using rule 51 (expression -> FALSE .)
    FUNCTION        reduce using rule 51 (expression -> FALSE .)
    NAME            reduce using rule 51 (expression -> FALSE .)
    PRINT           reduce using rule 51 (expression -> FALSE .)
    SPRINT          reduce using rule 51 (expression -> FALSE .)
    EQUAL           reduce using rule 51 (expression -> FALSE .)
    $end            reduce using rule 51 (expression -> FALSE .)
    RBRACKET        reduce using rule 51 (expression -> FALSE .)


state 34

    (53) expression -> MINUS . expression
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression

    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    expression                     shift and go to state 68

state 35

    (31) inst -> FUNCTION NAME . LPAREN params RPAREN b_bloc

    LPAREN          shift and go to state 69


state 36

    (33) inst -> NAME LPAREN . call_params RPAREN COLON
    (34) call_params -> . expression COMMA call_params
    (35) call_params -> . expression
    (36) call_params -> .
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression

    RPAREN          reduce using rule 36 (call_params -> .)
    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    call_params                    shift and go to state 70
    expression                     shift and go to state 71

state 37

    (7) increment -> NAME PLUS . PLUS
    (43) operator -> PLUS .

    PLUS            shift and go to state 72
    EQUAL           reduce using rule 43 (operator -> PLUS .)


state 38

    (8) decrement -> NAME MINUS . MINUS
    (44) operator -> MINUS .

    MINUS           shift and go to state 73
    EQUAL           reduce using rule 44 (operator -> MINUS .)


state 39

    (9) operator_assign -> NAME operator . EQUAL expression

    EQUAL           shift and go to state 74


state 40

    (11) assign -> NAME EQUAL . expression
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression

    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    expression                     shift and go to state 75

state 41

    (37) params -> NAME COMMA . params
    (37) params -> . NAME COMMA params
    (38) params -> . NAME
    (39) params -> .

    NAME            shift and go to state 76
    EQUAL           reduce using rule 39 (params -> .)
    RPAREN          reduce using rule 39 (params -> .)

    params                         shift and go to state 77

state 42

    (45) operator -> DIVIDE .

    EQUAL           reduce using rule 45 (operator -> DIVIDE .)
    NAME            reduce using rule 45 (operator -> DIVIDE .)
    LPAREN          reduce using rule 45 (operator -> DIVIDE .)
    NUMBER          reduce using rule 45 (operator -> DIVIDE .)
    TRUE            reduce using rule 45 (operator -> DIVIDE .)
    FALSE           reduce using rule 45 (operator -> DIVIDE .)
    MINUS           reduce using rule 45 (operator -> DIVIDE .)


state 43

    (46) operator -> TIMES .

    EQUAL           reduce using rule 46 (operator -> TIMES .)
    NAME            reduce using rule 46 (operator -> TIMES .)
    LPAREN          reduce using rule 46 (operator -> TIMES .)
    NUMBER          reduce using rule 46 (operator -> TIMES .)
    TRUE            reduce using rule 46 (operator -> TIMES .)
    FALSE           reduce using rule 46 (operator -> TIMES .)
    MINUS           reduce using rule 46 (operator -> TIMES .)


state 44

    (47) operator -> MODULO .

    EQUAL           reduce using rule 47 (operator -> MODULO .)
    NAME            reduce using rule 47 (operator -> MODULO .)
    LPAREN          reduce using rule 47 (operator -> MODULO .)
    NUMBER          reduce using rule 47 (operator -> MODULO .)
    TRUE            reduce using rule 47 (operator -> MODULO .)
    FALSE           reduce using rule 47 (operator -> MODULO .)
    MINUS           reduce using rule 47 (operator -> MODULO .)


state 45

    (54) inst -> params EQUAL . multiple_values
    (55) multiple_values -> . expression
    (56) multiple_values -> . expression COMMA multiple_values
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression

    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    multiple_values                shift and go to state 78
    expression                     shift and go to state 79

state 46

    (40) inst -> PRINT LPAREN . expression RPAREN COLON
    (27) expression -> . expression operator expression
    (32) expression -> . NAME LPAREN call_params RPAREN
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . NUMBER
    (50) expression -> . TRUE
    (51) expression -> . FALSE
    (52) expression -> . NAME
    (53) expression -> . MINUS expression

    NAME            shift and go to state 29
    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    MINUS           shift and go to state 34

    expression                     shift and go to state 80

state 47
